--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@ body {
     background-image: url(./235784.jpg);
 }
 
+a {
+    background-color: rgb(19, 19, 19);
+    color: white;
+}
+
+a:hover {
+
+}
+
 /*Imagem*/
 .image {
     display: inline-block;
@@ -26,7 +35,7 @@ body {
 }
 
 /*Estilização do último item*/
-li:last-child {
+.last {
     background-color: rgb(211, 92, 112);
 }
 
@@ -77,3 +86,4 @@ main {
     background-position: center;
     margin-right: 1rem;
 }
+
