--- a/PicPage.css
+++ b/PicPage.css
@@ -1,11 +1,26 @@
 main {
-    display: flex;
-    gap: .8rem;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-size: contain;
+    display: grid;
+    grid-template-areas: 
+    "pic1 pic2"
+    "pic3 pic4";
+    grid-template-rows: 25%;}
+
+
+.pic1 {
+    grid-area: "pic1";
 }
 
-img {
-    size: 50px;
+.pic2 {
+    grid-area: "pic2";
+
+}
+
+.pic3 {
+    grid-area: "pic3";
+
+}
+
+.pic4 {
+    grid-area: "pic4";
+
 }
